# gsoc-2022-arduino-core

./: .checkpatch.conf  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  Kconfig  README.md  install.sh  module.conf  west.yml
.github/workflows/: build.yml  checkpatch.yml  license_check.yml  rm-old.yml
cores/: CMakeLists.txt
cores/arduino/: Arduino.h  ArduinoAPI.h  CMakeLists.txt  Common.cpp  Common.h  Print.cpp  arduino_nano_ble_sense_pinmap.h  main.cpp  main_loader.c  module_export.c  particle_xenon_pinmap.h  zephyrCommon.cpp  zephyrInternal.h  zephyrPrint.cpp  zephyrPrint.h  zephyrSerial.cpp  zephyrSerial.h
documentation/: arduino_libs.md  variants.md
examples/arduino-threads/: CMakeLists.txt  README.rst
examples/arduino_hello_world/: CMakeLists.txt
examples/blinky_arduino/: README.rst
examples/button_press_led/: README.rst  sample.yaml
examples/hello_arduino/: CMakeLists.txt  prj.conf
libraries/: CMakeLists.txt
libraries/SPI/: CMakeLists.txt  SPI.cpp  SPI.h
libraries/Wire/: CMakeLists.txt  Wire.cpp  Wire.h
samples/analog_input/: CMakeLists.txt  prj.conf
samples/attach_interrupt/: CMakeLists.txt  prj.conf
samples/blinky_arduino/: CMakeLists.txt  prj.conf
samples/button_press_led/: CMakeLists.txt  prj.conf
samples/fade/: CMakeLists.txt  prj.conf
samples/hello_arduino/: CMakeLists.txt  prj.conf
samples/i2cdemo/: CMakeLists.txt  README.rst  prj.conf
samples/serial_event/: CMakeLists.txt
samples/spi_controller/: CMakeLists.txt  prj.conf
samples/threads_arduino/: prj.conf  (+2 more)
variants/: CMakeLists.txt  variants.h
zephyr/: module.yml
(+41 files in other folders)
